fix low contrast label

--- a/src/components/Checkbox/Checkbox.scss
+++ b/src/components/Checkbox/Checkbox.scss
@@ -66,7 +66,6 @@
 }
 
 .label {
-	color: $color-typography-faint;
 	line-height: 1;
 	width: 100%;
 }
